--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment constiables file
+# dotenv environment variables file
 .env
 .env.test
 
