--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "demo-express",
+  "name": "application-name",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "export NODE_ENV='dev' &&nodemon app.js"
+    "start": "nodejs ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "dotenv": "^16.0.0",
     "express": "~4.0.0",
-    "jade": "~1.3.0",
+    "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
-    "pg": "^8.7.3",
-    "static-favicon": "~1.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "jade": "~1.3.0"
   }
 }
