--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "~0.7.4",
     "dotenv": "^16.0.0",
     "express": "~4.0.0",
-    "jade": "~1.3.0",
+    "express-fileupload": "^1.3.1",
     "morgan": "~1.0.0",
     "pg": "^8.7.3",
     "static-favicon": "~1.0.0"
